--- a/src/css/BackgroundChoiceComponent.css
+++ b/src/css/BackgroundChoiceComponent.css
@@ -1,46 +1,73 @@
 .container {
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: center;
-  }
-  
-  .background-bar {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-  }
-  
-  .background-option {
-    width: 120px;
-    height: 80px;
-    margin: 0 10px;
-    cursor: pointer;
-    opacity: 0.5;
-    transition: opacity 0.3s ease;
-  }
-  
-  .background-option.selected {
-    opacity: 1;
-  }
-  
-  .selected-image-container {
-    position: relative;
-    margin-top: 20px;
-  }
-  
-  .selected-background {
-    width: 750px;
-    height: 500px;
-    border: 1px solid #ccc;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
+  max-width: 1600px;
+  margin: 0 auto;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
-  .selected-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    z-index: 1;
-  }
+.background-bar {
+  display: flex;
+  justify-content: center;
+  margin-top: 35px;
+}
+
+.background-option {
+  width: 150px;
+  height: 100px;
+  margin: 0 10px;
+  cursor: pointer;
+  border-radius: 10px;
+  opacity: 0.5;
+  transition: opacity 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.background-option.selected {
+  opacity: 1;
+}
+
+.selected-image-container {
+  position: relative;
+  margin-top: 20px;
+}
+
+.selected-background {
+  width: 1200px;
+  height: 700px;
+  border-radius: 1px;
+  border: 1px solid #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.selected-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 75%;
+  height: 75%;
+  object-fit: contain;
+  z-index: 1;
+}
+
+.combine-btn {
+  font-family: girott, sans-serif;
+  font-size: 24px;
+  position: absolute;
+  bottom: -5px;
+  right: -250px;
+  margin-right: 10px;
+  color: white;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.combine-btn.hovered {
+  color: rgb(235, 163, 152);
+}
+
+.combine-btn:hover {
+  color: rgb(235, 163, 152);
+}
