--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,14 +1,20 @@
 body {
     background-color: #0F2334;
     color: #FFFFFF;
+    font-family: "aktiv-grotesk", sans-serif
 }
 
 a {
-    color: white;
+    color: #EBA299;
     text-decoration: none;
 }
 
 a:hover {
-    color: #EBA299;
+    color: white;
     text-decoration: none;
+}
+
+@font-face {
+    font-family: "aktiv-grotesk";
+    src: url("../assets/fonts/AktivGrotesk-Bold.woff") format("woff")
 }
