--- a/src/css/HeaderComponent.css
+++ b/src/css/HeaderComponent.css
@@ -1,6 +1,6 @@
 .HeaderNav{
     position: relative;
-    height: 0px
+    
 }
 
 .HeaderNavItem{
@@ -16,7 +16,7 @@
     font-size: 70px;
     color: rgb(235, 163, 152);
     letter-spacing: -4px;
-    line-height: 150px;
+    line-height: 13vh;
     list-style-type: none;
     padding: 0 22px;
     display: inline-block;
