--- a/src/css/App.css
+++ b/src/css/App.css
@@ -12,6 +12,8 @@ a {
 a:hover {
     color: white;
     text-decoration: none;
+    transition: 0.5s;
+    transition-timing-function: ease-in-out;
 }
 
 @font-face {
