--- a/src/css/App.css
+++ b/src/css/App.css
@@ -16,6 +16,16 @@ a:hover {
     transition-timing-function: ease-in-out;
 }
 
+#customized-container {
+    max-width: 80%;
+    margin: 0 auto;
+    margin-top: 0.5vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 @font-face {
     font-family: "aktiv-grotesk";
     src: url("../assets/fonts/AktivGrotesk-Bold.woff") format("woff")
