Movement icon, positioning correct

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,7 @@
 body {
     background-color: #0F2334;
     color: #FFFFFF;
+    /*overflow: hidden;*/
     font-family: "aktiv-grotesk", sans-serif
 }
 
@@ -19,12 +20,13 @@ a {
 #customized-container {
     max-width: 80%;
     margin: 0 auto;
-    margin-top: 0.5vh;
+    margin-top: -5vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+
 
 @font-face {
     font-family: "aktiv-grotesk";
