--- a/src/css/BackgroundChoiceComponent.css
+++ b/src/css/BackgroundChoiceComponent.css
@@ -1,7 +1,7 @@
 .background-bar {
     display: flex;
     justify-content: center;
-    margin-top: 35px;
+    margin-top: 55px;
 }
 
 .background-option {
@@ -24,11 +24,13 @@
     margin-top: 20px;
 }
 
+element::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
+
 .selected-background {
-    width: 1200px;
-    height: 700px;
-    border-radius: 1px;
-    border: 1px solid #ffffff;
+    border-radius: 10px;
+    border: 2px solid #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -36,8 +38,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 75%;
-    height: 75%;
     object-fit: contain;
     z-index: 1;
 }
@@ -49,6 +49,7 @@
     bottom: -5px;
     right: -250px;
     margin-right: 10px;
+    user-select: none;
     color: white;
     cursor: pointer;
     transition: color 0.3s ease;
@@ -60,4 +61,36 @@
 
 .combine-btn:hover {
     color: rgb(235, 163, 152);
+}
+
+#icon-mover {
+    position: absolute;
+    height: 100%;
+    top: 89%;
+    left: 92.5%
+}
+
+#arrow-left {
+    position: absolute;
+    height: 5%;
+    left: -1.5%;
+}
+
+#arrow-right {
+    position: absolute;
+    height: 5%;
+    left: 3.5%;
+}
+
+#arrow-up {
+    position: absolute;
+    color: white;
+    top: -4%;
+    height: 5%;
+}
+
+#arrow-down {
+    position: absolute;
+    top: 4%;
+    height: 5%;
 }
