--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,14 +5,14 @@ body {
 }
 
 a {
-    color: #ffffff;
+    color:rgb(235, 163, 152);
     text-decoration: none;
     transition: color 0.3s ease, transform 0.3s ease;
 }
 
-.a.hovered,
-.a:hover {
-    color: rgb(235, 163, 152);
+a.hovered,
+a:hover {
+    color:white;
     transform: scale(1.05);
   }
 
