--- a/src/css/TakePicturePage.css
+++ b/src/css/TakePicturePage.css
@@ -46,7 +46,7 @@
     display: none;
 }
 
-.picture-btn {
+.upload-btn {
     height: 100px;
     cursor: pointer;
     color: #ffffff;
@@ -54,8 +54,8 @@
     transition: color 0.3s ease, transform 0.3s ease;
 }
 
-.picture-btn.hovered,
-.picture-btn:hover {
+.upload-btn.hovered,
+.upload-btn:hover {
     color: rgb(235, 163, 152);
     transform: scale(1.05);
 }
