--- a/src/css/BackgroundChoiceComponent.css
+++ b/src/css/BackgroundChoiceComponent.css
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: center;
     margin-top: 55px;
-}
-
-.background-option {
+  }
+  
+  .background-option {
     width: 150px;
     height: 100px;
     margin: 0 10px;
@@ -13,36 +13,33 @@
     opacity: 0.5;
     transition: opacity 0.3s ease;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.background-option.selected {
+  }
+  
+  .background-option.selected {
     opacity: 1;
-}
-
-.selected-image-container {
+  }
+  
+  .selected-image-container {
     position: relative;
     margin-top: 20px;
-}
-
-element::-webkit-scrollbar {
-    display: none; /* for Chrome, Safari, and Opera */
-}
-
-.selected-background {
+  }
+  
+  .selected-background {
     border-radius: 10px;
+    object-fit: contain;
     border: 2px solid #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.selected-image {
+  }
+  
+  .selected-image {
     position: absolute;
     top: 0;
     left: 0;
     object-fit: contain;
     z-index: 1;
-}
-
-.combine-btn {
+  }
+  
+  .combine-btn {
     font-family: girott, sans-serif;
     font-size: 24px;
     position: absolute;
@@ -53,44 +50,44 @@ element::-webkit-scrollbar {
     color: white;
     cursor: pointer;
     transition: color 0.3s ease;
-}
-
-.combine-btn.hovered {
+  }
+  
+  .combine-btn.hovered {
     color: rgb(235, 163, 152);
-}
-
-.combine-btn:hover {
+  }
+  
+  .combine-btn:hover {
     color: rgb(235, 163, 152);
-}
-
-#icon-mover {
+  }
+  
+  #icon-mover {
     position: absolute;
     height: 100%;
     top: 89%;
-    left: 92.5%
-}
-
-#arrow-left {
+    left: 92.5%;
+  }
+  
+  #arrow-left {
     position: absolute;
     height: 5%;
     left: -1.5%;
-}
-
-#arrow-right {
+  }
+  
+  #arrow-right {
     position: absolute;
     height: 5%;
     left: 3.5%;
-}
-
-#arrow-up {
+  }
+  
+  #arrow-up {
     position: absolute;
     color: white;
     top: -4%;
     height: 5%;
-}
-
-#arrow-down {
+  }
+  
+  #arrow-down {
     position: absolute;
     top: 4%;
     height: 5%;
-}
+  }
