--- a/src/css/BackgroundChoiceComponent.css
+++ b/src/css/BackgroundChoiceComponent.css
@@ -1,6 +1,4 @@
 .background-bar {
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     margin-right: 5vw;
     max-height: 800px;
@@ -82,7 +80,8 @@ element::-webkit-scrollbar {
 #icon-mover {
     position: relative;
     height: 250px;
-    width: 250px;      
+    width: 250px;     
+	margin-top: 40vh; 
 }
 
 #arrow-left {
@@ -112,4 +111,23 @@ element::-webkit-scrollbar {
     top: 35%;
     height: 20%;
     left: 25%;
+}
+
+.background-bar::-webkit-scrollbar {
+	width: 20px;
+}
+
+.background-bar::-webkit-scrollbar-track {
+	background-color: transparent;
+}
+
+.background-bar::-webkit-scrollbar-thumb {
+	background-color: #d6dee1;
+	border-radius: 20px;
+	border: 6px solid transparent;
+	background-clip: content-box;
+}
+
+.background-bar::-webkit-scrollbar-corner {
+	background-color: transparent;
 }
