--- a/src/css/BackgroundChoiceComponent.css
+++ b/src/css/BackgroundChoiceComponent.css
@@ -59,10 +59,7 @@ element::-webkit-scrollbar {
   .combine-btn {
     font-family: girott, sans-serif;
     font-size: 24px;
-    position: relative;
-    /* bottom: -5px;
-    right: -250px;
-    margin-right: 10px; */
+    position: relative;    
     user-select: none;
     color: white;
     cursor: pointer;
@@ -84,11 +81,23 @@ element::-webkit-scrollbar {
 	margin-top: 40vh; 
 }
 
+.arrows{
+    cursor: pointer;
+    float: right;
+    color: #ffffff;
+    transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.arrows:hover{
+    color: rgb(235, 163, 152);
+    transform: scale(1.05);
+}
+
 #arrow-left {
     position: absolute;
     height: 20%;
     left: 10%;
-    top:20%;
+    top:20%;    
 }
 
 #arrow-right {
@@ -99,8 +108,7 @@ element::-webkit-scrollbar {
 }
 
 #arrow-up {
-    position: absolute;
-    color: white;
+    position: absolute;    
     top: 5%;
     height: 20%;
     left: 25%;
@@ -110,7 +118,7 @@ element::-webkit-scrollbar {
     position: absolute;
     top: 35%;
     height: 20%;
-    left: 25%;
+    left: 25%;    
 }
 
 .background-bar::-webkit-scrollbar {
