--- a/src/css/BackgroundChoiceComponent.css
+++ b/src/css/BackgroundChoiceComponent.css
@@ -21,7 +21,8 @@
     position: relative;
     width: 800px;
     overflow: hidden;
-
+    margin-left: 20px;
+        
 }
 
 .background-option.selected {
