--- a/src/css/App.css
+++ b/src/css/App.css
@@ -35,3 +35,22 @@ a:hover {
     font-family: "aktiv-grotesk";
     src: url("../assets/fonts/AktivGrotesk-Bold.woff") format("woff")
 }
+
+::-webkit-scrollbar {
+	width: 20px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #d6dee1;
+	border-radius: 20px;
+	border: 6px solid transparent;
+	background-clip: content-box;
+}
+
+::-webkit-scrollbar-corner {
+	background-color: transparent;
+}
