--- a/src/css/BackgroundChoiceComponent.css
+++ b/src/css/BackgroundChoiceComponent.css
@@ -47,6 +47,7 @@ element::-webkit-scrollbar {
     border-radius: 10px;
     object-fit: contain;
     border: 2px solid #ffffff;
+    user-select: none;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
