--- a/src/css/BackgroundChoiceComponent.css
+++ b/src/css/BackgroundChoiceComponent.css
@@ -66,16 +66,17 @@ element::-webkit-scrollbar {
     position: relative;    
     user-select: none;
     color: white;
-    cursor: pointer;
+    cursor: pointer;    
+    border: 6px solid white;
+    border-radius: 20%;
     transition: color 0.3s ease;    
   }
-  
-  .combine-btn.hovered {
-    color: rgb(235, 163, 152);
-  }
-  
+   
   .combine-btn:hover {
     color: rgb(235, 163, 152);
+    border: 6px solid  rgb(235, 163, 152);
+    border-radius: 20%;
+    transition: color 0.5s ease;
 }
 
 #icon-mover {
