--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -12,10 +12,33 @@
     font-size: 20px;
 }
 
-#animted-background {
+#animated-bg {
     position: fixed;
+    z-index: -5;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh; 
+}
+
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+.out-top {
+    animation: rotate 20s linear infinite;
+    transform-origin: 100px 2px;
+}
+.in-top {
+    animation: rotate 10s linear infinite;
+    transform-origin: 100px 2px;
+}
+.out-bottom {
+    animation: rotate 25s linear infinite;
+    transform-origin: 1px 100px;
+}
+.in-bottom {
+    animation: rotate 15s linear infinite;
+    transform-origin: 1px 100px;
 }
