Update landingPage css
Scaled text on LandingPage

--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -8,8 +8,14 @@
     font-size: 62px;
 }
 
+
 #under-text {
     font-size: 30px;
+}
+
+#text-wrapper:hover #over-text,
+#text-wrapper:hover #under-text {
+  transform: scale(1.2);
 }
 
 #animated-bg {
