--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -60,7 +60,8 @@
     align-items: center;
   }
   
-  IMG {
+  #tile-1 {
+    position: relative;
     width: 50%;
     height: 100%;
     object-fit: cover;
@@ -68,54 +69,90 @@
     grid-column: span 2;
   }
 
-  #tile-1 {
-    position: relative;
-  }
-
   #tile-2 {
     position: relative;
     left: -75%;
     top: 55%;
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    grid-column: span 2;
   }
 
   #tile-3 {
     position: relative;
     top: 0%;
     left: 15%;
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    grid-column: span 2;
   }
 
   #tile-4 {
     position: relative;
     top: -105%;
     left:55%;
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    grid-column: span 2;
   }
 
   #tile-5 {
     position: relative;
     top:-50%;
     left:-20%;
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    grid-column: span 2;
   }
 
   #tile-6 {
     position: relative;
     top: -50%;
     left:-12.5%;
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    grid-column: span 2;
   }
 
   #tile-7 {
     position: relative;
     top: -210%;
     left:110%;
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    grid-column: span 2;
   }
 
   #tile-8 {
     position: relative;
     top: -155%;
     left:35%;
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    grid-column: span 2;
   }
 
   #tile-9 {
     position: relative;
     top: -210%;
     left:-40%;
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    grid-column: span 2;
   }
