--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -11,6 +11,22 @@
 
 #under-text {
     font-size: 30px;
+    position: absolute;
+    color:rgb(255, 255, 255);
+    z-index: 1;
+    top: 400px;
+    animation: test 2s ease;
+}
+
+@keyframes test {
+    from {
+        transform: scale(0.95);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
 #text-wrapper:hover #over-text {
@@ -56,6 +72,7 @@
     position: relative;
     z-index: -3;
     justify-items: center;
+    border-radius: 10px;
     align-items: center;
   }
   
@@ -66,6 +83,10 @@
     object-fit: cover;
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
     grid-column: span 2;
+    opacity: 0;
+    animation: opacity 3s ease;
+    animation-delay: 0s;
+    animation-fill-mode: forwards;
   }
 
   #tile-2 {
@@ -77,6 +98,10 @@
     object-fit: cover;
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
     grid-column: span 2;
+    opacity: 0;
+    animation: opacity 3s ease;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
   }
 
   #tile-3 {
@@ -88,6 +113,11 @@
     object-fit: cover;
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
     grid-column: span 2;
+    opacity: 0;
+    animation: opacity 3s ease;
+    animation-delay: 8s;
+    animation-fill-mode: forwards;
+
   }
 
   #tile-4 {
@@ -99,6 +129,10 @@
     object-fit: cover;
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
     grid-column: span 2;
+    opacity: 0;
+    animation: opacity 3s ease;
+    animation-delay: 2s;
+    animation-fill-mode: forwards;
   }
 
   #tile-5 {
@@ -110,6 +144,10 @@
     object-fit: cover;
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
     grid-column: span 2;
+    opacity: 0;
+    animation: opacity 3s ease;
+    animation-delay: 3s;
+    animation-fill-mode: forwards;
   }
 
   #tile-6 {
@@ -121,6 +159,11 @@
     object-fit: cover;
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
     grid-column: span 2;
+    opacity: 0;
+    animation-play-state: running;
+    animation: opacity 3s ease;
+    animation-delay: 7s;
+    animation-fill-mode: forwards;
   }
 
   #tile-7 {
@@ -132,6 +175,11 @@
     object-fit: cover;
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
     grid-column: span 2;
+    opacity: 0;
+    animation-play-state: running;
+    animation: opacity 3s ease;
+    animation-delay: 4s;
+    animation-fill-mode: forwards;
   }
 
   #tile-8 {
@@ -143,6 +191,12 @@
     object-fit: cover;
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
     grid-column: span 2;
+    opacity: 0;
+    animation-play-state: running;
+    animation: opacity 3s ease;
+    animation-delay: 5s;
+    animation-fill-mode: forwards;
+
   }
 
   #tile-9 {
@@ -154,4 +208,20 @@
     object-fit: cover;
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
     grid-column: span 2;
+    opacity: 0;
+    animation-play-state: running;
+    animation: opacity 3s ease;
+    animation-delay: 6s;
+    animation-fill-mode: forwards;
   }
+
+  @keyframes opacity {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+  
