--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,8 +1,8 @@
 body {
     background-color: #0F2334;
     color: #FFFFFF;
-    /*overflow: hidden;*/
-    font-family: "aktiv-grotesk", sans-serif
+    font-family: "aktiv-grotesk", sans-serif;
+    justify-content: center;
 }
 
 a {
