--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -15,7 +15,12 @@
     color:rgb(255, 255, 255);
     z-index: 1;
     top: 400px;
+    left: 20vw;
     animation: test 2s ease;
+    justify-content: center;
+    text-align: center;
+    align-self: center;
+
 }
 
 @keyframes test {
@@ -76,7 +81,7 @@
     position: relative;
     z-index: -3;
     justify-items: center;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     align-items: center;
   }
   
