--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -73,15 +73,13 @@
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-gap: 1rem;
-    position: relative;
+    margin-left: 75px;
+    position: relative; 
     z-index: -3;
-    justify-items: center;
     border-radius: 10px;
-    align-items: center;
   }
   
   #tile-1 {
-    position: relative;
     width: 50%;
     height: 100%;
     object-fit: cover;
@@ -94,7 +92,6 @@
   }
 
   #tile-2 {
-    position: relative;
     left: -75%;
     top: 55%;
     width: 50%;
@@ -109,7 +106,6 @@
   }
 
   #tile-3 {
-    position: relative;
     top: 0%;
     left: 15%;
     width: 50%;
@@ -125,7 +121,6 @@
   }
 
   #tile-4 {
-    position: relative;
     top: -105%;
     left:55%;
     width: 50%;
@@ -140,7 +135,6 @@
   }
 
   #tile-5 {
-    position: relative;
     top:-50%;
     left:-20%;
     width: 50%;
@@ -155,7 +149,6 @@
   }
 
   #tile-6 {
-    position: relative;
     top: -50%;
     left:-12.5%;
     width: 50%;
@@ -171,7 +164,6 @@
   }
 
   #tile-7 {
-    position: relative;
     top: -210%;
     left:110%;
     width: 50%;
@@ -187,7 +179,6 @@
   }
 
   #tile-8 {
-    position: relative;
     top: -155%;
     left:35%;
     width: 50%;
@@ -204,7 +195,6 @@
   }
 
   #tile-9 {
-    position: relative;
     top: -210%;
     left:-40%;
     width: 50%;
