--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -14,8 +14,8 @@
     position: absolute;
     color:rgb(255, 255, 255);
     z-index: 1;
-    top: 400px;
-    left: 20vw;
+    top: 40vh;
+    left: 23.5vw;
     animation: test 2s ease;
     justify-content: center;
     text-align: center;
