--- a/src/css/BackgroundChoiceComponent.css
+++ b/src/css/BackgroundChoiceComponent.css
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: center;
     overflow: hidden;
+    margin-top: 175px;
     margin-left: 20px;    
 }
 
@@ -43,7 +44,7 @@ element::-webkit-scrollbar {
 .selected-background {
     position: relative;
     width: 800px;
-    height: 800px;
+    height: 450px;
     border-radius: 10px;
     object-fit: contain;
     border: 2px solid #ffffff;
