--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -10,16 +10,15 @@
 
 
 #under-text {
+    position: relative;
     font-size: 30px;
-    position: absolute;
     color:rgb(255, 255, 255);
     z-index: 1;
-    top: 40vh;
-    left: 23.5vw;
     animation: test 2s ease;
-    justify-content: center;
     text-align: center;
-    align-self: center;
+    justify-content: center;
+    bottom: 80vh;
+
 
 }
 
