--- a/src/css/ActionPage.css
+++ b/src/css/ActionPage.css
@@ -10,6 +10,13 @@
 		margin: 1%;
 }
 
+#artNameText {
+	border-radius: 5px;
+	height: 30px;
+	width: 40%;
+	margin-bottom: 10px;
+}
+
 @keyframes fadeIn {
 		0% {
 			opacity: 0;
