--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -5,6 +5,7 @@
 }
 
 #over-text {
+    margin-bottom: 45px;
     font-size: 62px;
 }
 
@@ -14,13 +15,12 @@
     position: absolute;
     color:rgb(255, 255, 255);
     z-index: 1;
-    top: 40vh;
+    top: 45vh;
     left: 23.5vw;
     animation: test 2s ease;
     justify-content: center;
     text-align: center;
     align-self: center;
-
 }
 
 @keyframes test {
@@ -48,7 +48,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 120%; 
+    height: 120%;
+    overflow: hidden; 
 }
 
 @keyframes rotate {
